@@ -86,7 +86,7 @@ public class SimplePostTool {
   private static final int DEFAULT_WEB_DELAY = 10;
   private static final int MAX_WEB_DEPTH = 10;
   private static final String DEFAULT_CONTENT_TYPE = "application/xml";
-  private static final String DEFAULT_FILE_TYPES = "xml,json,csv,pdf,doc,docx,ppt,pptx,xls,xlsx,odt,odp,ods,ott,otp,ots,rtf,htm,html,txt,log"; 
+  private static final String DEFAULT_FILE_TYPES = "xml,json,jsonl,csv,pdf,doc,docx,ppt,pptx,xls,xlsx,odt,odp,ods,ott,otp,ots,rtf,htm,html,txt,log";
 
   static final String DATA_MODE_FILES = "files";
   static final String DATA_MODE_ARGS = "args";
@@ -102,6 +102,7 @@ public class SimplePostTool {
   URL solrUrl;
   OutputStream out = null;
   String type;
+  String format;
   String mode;
   boolean commit;
   boolean optimize;
@@ -133,6 +134,7 @@ public class SimplePostTool {
     mimeMap.put("xml", "application/xml");
     mimeMap.put("csv", "text/csv");
     mimeMap.put("json", "application/json");
+    mimeMap.put("jsonl", "application/json");
     mimeMap.put("pdf", "application/pdf");
     mimeMap.put("rtf", "text/rtf");
     mimeMap.put("html", "text/html");
@@ -234,6 +236,7 @@ public class SimplePostTool {
       URL url = new URL(urlStr);
       boolean auto = isOn(System.getProperty("auto", DEFAULT_AUTO));
       String type = System.getProperty("type");
+      String format = System.getProperty("format");
       // Recursive
       int recursive = 0;
       String r = System.getProperty("recursive", DEFAULT_RECURSIVE);
@@ -253,7 +256,7 @@ public class SimplePostTool {
       boolean commit = isOn(System.getProperty("commit",DEFAULT_COMMIT));
       boolean optimize = isOn(System.getProperty("optimize",DEFAULT_OPTIMIZE));
       
-      return new SimplePostTool(mode, url, auto, type, recursive, delay, fileTypes, out, commit, optimize, args);
+      return new SimplePostTool(mode, url, auto, type, format, recursive, delay, fileTypes, out, commit, optimize, args);
     } catch (MalformedURLException e) {
       fatal("System Property 'url' is not a valid URL: " + urlStr);
       return null;
@@ -275,13 +278,14 @@ public class SimplePostTool {
    * @param optimize if true, will optimize at end of posting
    * @param args a String[] of arguments, varies between modes
    */
-  public SimplePostTool(String mode, URL url, boolean auto, String type,
+  public SimplePostTool(String mode, URL url, boolean auto, String type, String format,
       int recursive, int delay, String fileTypes, OutputStream out, 
       boolean commit, boolean optimize, String[] args) {
     this.mode = mode;
     this.solrUrl = url;
     this.auto = auto;
     this.type = type;
+    this.format = format;
     this.recursive = recursive;
     this.delay = delay;
     this.fileTypes = fileTypes;
@@ -773,7 +777,11 @@ public class SimplePostTool {
         }
         // TODO: Add a flag that disables /update and sends all to /update/extract, to avoid CSV, JSON, and XML files
         // TODO: from being interpreted as Solr documents internally
-        if(type.equals("application/xml") || type.equals("text/csv") || type.equals("application/json")) {
+        if (type.equals("application/json") && !"solr".equals(format))  {
+          suffix = "/json/docs";
+          String urlStr = appendUrlPath(solrUrl, suffix).toString();
+          url = new URL(urlStr);
+        } else if (type.equals("application/xml") || type.equals("text/csv") || type.equals("application/json")) {
           // Default handler
         } else {
           // SolrCell
