@@ -1,0 +1,3 @@
+{"id":"0060248025","name":"Falling Up","inStock": true,"author": "Shel Silverstein"}
+{"id":"0679805273","name":"Oh, The Places You'll Go","inStock": true,"author": "Dr. Seuss"}
+
